# secure-endpoint-mcp-server

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
secure_endpoint_mcp/: __init__.py
secure_endpoint_mcp/client/: __init__.py  auth_client.py
secure_endpoint_mcp/config/: logging.py  settings.py
secure_endpoint_mcp/feature_flags/: manager.py
secure_endpoint_mcp/server/: mcp_server.py  schema_fix.py
tests/: openapi.json  test_auth_client.py  test_config.py  test_feature_flags.py  test_mcp_server.py
